<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RuiTuan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text1">9块9</string>
    <string name="tab_text2">19块9</string>
    <string name="tab_text3">29块9</string>
    <string name="tab_text4">值得买</string>
    <string name="tab_text5">品牌团</string>
    <string name="fragment_ly_one_text">这是第一个Fragment</string>
    <string name="fragment_ly_two_text">这是第二个Fragment</string>
    <string name="fragment_ly_three_text">这是第三个Fragment</string>
    <string name="fragment_ly_four_text">这是第四个Fragment</string>
    <string name="fragment_ly_five_text">这是第五个Fragment</string>
    <string name="title_text">9块9</string>
    <string name="shangp">醉梦红酒 法国原瓶进口红酒</string>
    <string name="car">永久山地车自行车21速</string>
    <string name="mou">魅族 MX3手机钢化膜 MX3</string>
    <string name="ptgs">新疆特产 野生黑加仑葡萄干</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="miaoshu">仅售178元，口味浓郁，香气独特，色泽迷人。余味悠长迷人！甜蜜香浓浆果味，一口，你就会爱上TA！</string>
    <string name="caims">仅售888元，禧玛诺变速山地自行车1辆！加厚壁管抗冲击，全齿平纹轮胎，变速精准，操作感卓越！</string>
</resources>
