<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EDEDED"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/showpro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/shangp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="精品"
                    android:textSize="14dp"
                    android:textColor="#ffffff"
                    android:background="#FF0000"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
            
            <TextView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="10月31日"
                android:layout_marginTop="5dp"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">


                <ImageView
                    android:id="@+id/pic1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/jiu03"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/pic1"
                    android:layout_marginLeft="15dp"
                    android:text="@string/miaoshu"
                    android:textSize="14dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="#FF0000"
                    android:textSize="14dp"
                    android:text="点击购买 >"
                    />
                </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/car"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="品牌"
                        android:textSize="14dp"
                        android:textColor="#ffffff"
                        android:background="#FF0000"
                        android:textStyle="bold"
                        />
                </RelativeLayout>

                <TextView

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="10月31日"
                    android:layout_marginTop="5dp"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">


                    <ImageView
                        android:id="@+id/pic2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/car"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/pic2"
                        android:layout_marginLeft="15dp"
                        android:text="@string/caims"
                        android:textSize="14dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:textColor="#FF0000"
                        android:textSize="14dp"
                        android:text="点击购买 >"
                        />
                </RelativeLayout>
            </LinearLayout>

            <!--产品三-->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/ptgs"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="精品"
                        android:textSize="14dp"
                        android:textColor="#ffffff"
                        android:background="#FF0000"
                        android:textStyle="bold"
                        />
                </RelativeLayout>

                <TextView

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="10月31日"
                    android:layout_marginTop="5dp"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">


                    <ImageView
                        android:id="@+id/pt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pt"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/pt"
                        android:layout_marginLeft="15dp"
                        android:text="@string/caims"
                        android:textSize="14dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:textColor="#FF0000"
                        android:textSize="14dp"
                        android:text="点击购买 >"
                        />
                </RelativeLayout>
            </LinearLayout>




        </LinearLayout>
        </ScrollView>
    </LinearLayout>